# FastAgent

./: .env.example  .gitignore  LICENSE  README.md  README.md.jinja  copier.yml  docker-compose.yml  main.py  pyproject.toml  ui.py
.github/workflows/: template-smoke.yml
backend/: .dockerignore  .env.example  .env.example.jinja  Dockerfile  pyproject.toml  pyproject.toml.jinja  requirements.txt
backend/src/: main.py
backend/src/api/: mcps.py
backend/src/api/v1/endpoints/: chat.py
backend/src/core/: config.py  container.py  logging_conf.py
backend/src/services/: chat_service.py  user_service.py
endpoint/: urls.py
frontend/: .dockerignore  .env.example  .env.example.jinja  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx
migrations/: env.py
migrations/versions/: 6dde9f3570e0_init_db.py
scripts/: get_token.py
src/: main.py
src/api/: routes.py
src/api/v1/endpoints/: auth.py  users.py
src/core/: config.py  container.py  database.py  logging_conf.py  security.py
src/models/: user_model.py
src/repository/: user_repository.py
src/schemas/: user_schema.py
src/services/: user_service.py
